# pka-cli

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml
pka_cli/: __init__.py  _env.py  cli.py  core.py
scripts/: setup_molgpka.sh
tests/: conftest.py  test_core.py
